syntax = "proto3";
option go_package = "github.com/satont/twir/libs/grpc/generated/api/overlays_be_right_back";
package api.overlays_be_right_back;

message Settings {
	message Late {
		bool enabled = 1;
		string text = 2;
		bool display_brb_time = 3;
	}

	string text = 1;
	Late late = 2;

	string background_color = 3;
	int32 font_size = 4;
	string font_color = 5;
	string font_family = 6;
}
